Colors contrast correction

--- a/style.css
+++ b/style.css
@@ -779,7 +779,7 @@ h4 {
 }
 
 .tc-white {
-    color: #f1753b!important;
+    color: #fd6c28!important;
 }
 
 .tc-white2 {
